--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
     <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="6.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="6.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.System" Version="6.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="6.0.1-rc2.3" />
     <PackageReference Include="Hangfire" Version="1.8.0-beta3" />
