--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails/Divstack.Company.Estimation.Tool.Emails.csproj
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails/Divstack.Company.Estimation.Tool.Emails.csproj
@@ -7,14 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Core\Divstack.Company.Estimation.Tool.Emails.Core.csproj"/>
-    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Payments\Divstack.Company.Estimation.Tool.Emails.Payments.csproj"/>
-    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Users\Divstack.Company.Estimation.Tool.Emails.Users.csproj"/>
-    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Valuations\Divstack.Company.Estimation.Tool.Emails.Valuations.csproj"/>
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Core\Divstack.Company.Estimation.Tool.Emails.Core.csproj" />
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Payments\Divstack.Company.Estimation.Tool.Emails.Payments.csproj" />
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Priorities\Divstack.Company.Estimation.Tool.Emails.Priorities.csproj" />
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Users\Divstack.Company.Estimation.Tool.Emails.Users.csproj" />
+    <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Valuations\Divstack.Company.Estimation.Tool.Emails.Valuations.csproj" />
   </ItemGroup>
 
   <ItemGroup>
