--- a/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Priorities/Divstack.Company.Estimation.Tool.Reminders.Priorities.csproj
+++ b/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Priorities/Divstack.Company.Estimation.Tool.Reminders.Priorities.csproj
@@ -12,12 +12,13 @@
     <ProjectReference Include="..\..\..\Shared\Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Priorities\Divstack.Company.Estimation.Tool.Priorities.Domain\Divstack.Company.Estimation.Tool.Priorities.Domain.csproj" />
     <ProjectReference Include="..\..\Priorities\Divstack.Company.Estimation.Tool.Priorities.IntegrationsEvents\Divstack.Company.Estimation.Tool.Priorities.IntegrationsEvents.csproj" />
     <ProjectReference Include="..\..\Valuations\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="reminders-valuations-appsettings.json">
+    <None Update="reminders-priorities-appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
