--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     
     steps:
+    - name: Checkout source code
     - uses: actions/checkout@v2
     
     - name: Set up Docker Buildx
