--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -15,7 +15,15 @@ jobs:
     
     steps:
     - name: Checkout source code
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
+    
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14
+    
+    - name: Smoke Tests
+      run: npm install rest-cli && restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -27,12 +35,6 @@ jobs:
         username: ${{ secrets.AzureAppService_ContainerUsername_99d8a2dd2ade4cae9f9b879e57612706 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_7a514faeb28c46088eb712818432a9cb }}
 
-    - name: Smoke
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 14
-    - run: npm install rest-cli && restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
-    
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
