--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: 14
     
     - name: Smoke Tests
-      run: npm install rest-cli && restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
+      run: npm install --global rest-cli && restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
