--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install --global rest-cli
       
     - name: Smoke Tests
-    - run: restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
+      run: restcli ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
