--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -56,23 +56,28 @@ jobs:
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_TITLE: ${{ secrets.SLACK_TITLE }}
-      
-    - name: Checkout source code
-      uses: actions/checkout@v3
-      
-    - name: Setup Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
-        
-    - name: Smoke Tests Install
-      run: npm install --global rest-cli
-      
-    - name: Smoke Tests
-      run: restcli --full ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
-      
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@v2.2.0
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_TITLE: ${{ secrets.SLACK_TITLE_SMOKE_TESTS_PASSED }}
+    
+  Smokes:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+
+      - name: Smoke Test Tools Install
+        run: npm install --global rest-cli
+
+      - name: Smoke Tests
+        run: restcli --full ./Tests/E2E/Divstack.Estimation.Tool.Tests.E2E.Api/Http/*.http
+
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2.2.0
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_TITLE: ${{ secrets.SLACK_TITLE_SMOKE_TESTS_PASSED }}
