--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
     - name: Generate Tests Report
       uses: zyborg/dotnet-tests-report@v1
       with:
+        project_path: Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests
         report_name: Estimation Tool
         report_title: Estimation Tool
         github_token: ${{ secrets.GITHUB_TOKEN }}
