--- a/Deployment/Infrastructure/Divstack.Estimation.Tool.Deployment.Infrastructure.csproj
+++ b/Deployment/Infrastructure/Divstack.Estimation.Tool.Deployment.Infrastructure.csproj
@@ -2,17 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.4.0" />
-    <PackageReference Include="Pulumi" Version="3.40.1" />
-    <PackageReference Include="Pulumi.Azure" Version="5.19.0" />
-    <PackageReference Include="Pulumi.AzureAD" Version="5.29.0-alpha.1662120600" />
-    <PackageReference Include="Pulumi.AzureNative" Version="1.78.0" />
-    <PackageReference Include="Pulumi.Docker" Version="3.4.1" />
+    <PackageReference Include="Pulumi" Version="3.48.0" />
+    <PackageReference Include="Pulumi.Azure" Version="5.25.0" />
+    <PackageReference Include="Pulumi.AzureAD" Version="5.31.0" />
+    <PackageReference Include="Pulumi.AzureNative" Version="1.87.0" />
+    <PackageReference Include="Pulumi.Docker" Version="3.6.1" />
   </ItemGroup>
 
 </Project>
