--- a/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Infrastructure/Divstack.Company.Estimation.Tool.Priorities.Infrastructure.csproj
+++ b/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Infrastructure/Divstack.Company.Estimation.Tool.Priorities.Infrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
