--- a/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
+++ b/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
-    <PackageReference Include="DotNet.Testcontainers" Version="1.7.0-beta.2269" />
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
@@ -16,6 +15,7 @@
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="Testcontainers" Version="2.3.0-beta.3547636764" />
   </ItemGroup>
 
   <ItemGroup>
